--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 <div class="lock-overlay">
-    <h1 class="lock-welcome">INDOTALENT WHMS.</h1>
+    <h1 class="lock-welcome">Arbat motors.</h1>
     <a asp-area="" asp-page="/Dashboards/DefaultDashboard">
-        <i class="fas fa-lock lock-icon"></i>
+        <i class="fas fa-motorcycle fa-5x"></i>
     </a>
 </div>
 
