--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -59,7 +59,7 @@
             <!-- /.col -->
         </div>
     </form>
-
+@* 
     <div class="social-auth-links text-center">
         <p>- OR -</p>
         <a href="#" class="btn btn-block btn-primary">
@@ -70,7 +70,7 @@
             <i class="fab fa-google-plus mr-2"></i>
             Sign up using Google+
         </a>
-    </div>
+    </div> *@
 
     <p class="mb-1">
         <a asp-page="./ForgotPassword">I forgot my password</a>
