--- a/Pages/Products/ProductForm.cshtml
+++ b/Pages/Products/ProductForm.cshtml
@@ -33,6 +33,20 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="@Model.ProductForm.Quantity" class="form-label"></label>
+                            <input asp-for="@Model.ProductForm.Quantity" class="form-control" type="number" step="0.01"/>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="@Model.ProductForm.LowQuantityLimit" class="form-label"></label>
+                            <input asp-for="@Model.ProductForm.LowQuantityLimit" class="form-control" type="number" step="0.01"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
                             <label asp-for="@Model.ProductForm.Description" class="form-label"></label>
@@ -106,6 +120,7 @@
                     'ProductForm.ProductGroupId': { required: true },
                     'ProductForm.UnitMeasureId': { required: true },
                     'ProductForm.UnitPrice': { required: true },
+                    
                 }
             }
 
